--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,49 @@
 @charset "utf-8";
 
 body {
-    font: 16px/1.5 dotum, gulim;
+    font: 16px/1.5 "Noto Sans KR","Maven Pro", sans-serif;
     color: #000;
+    background: black;
 }
-
+a, a:link {
+    color: inherit;
+    text-decoration: none;
+}
+ul {
+    list-style: none;
+}
 .blind {
     display: none;
+}
+
+/* ------------ 1일차 : ad ------------------------ */
+.ad {
+    background: cornflowerblue;
+    position: relative;
+    height: 80px;
+}
+.ad-img {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+.ad-close {
+    position: absolute;
+    padding:3px;  
+    font-size:12px;  
+    right: 0;
+    bottom: 0;
+    background: rgb(126, 126, 126);
+    color: white;
+}
+
+.header-wrap {
+    border-bottom:1px solid #333;
+    height: 90px;
+    overflow: hidden;
+}
+#headerMain {
+    max-width: 1100px;
+    margin: 0 auto;
+    color: white;
+    display: flex;
 }
