무슨무슨 작업이라고 간략하게 표기

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+
 @charset "utf-8";
 
 body {
@@ -43,10 +44,15 @@ ul {
 }
 #headerMain {
     max-width: 1100px;
+    height: 90px;
     margin: 0 auto;
     color: white;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; /* 수평 정렬 */
+    align-items: center; /* 수직 정렬 */
+}
+#mainLeft, #mainRight {
+    width: 480px;
 }
 .vip {
     display: flex;
@@ -55,16 +61,30 @@ ul {
     margin-right: 20px;
     text-transform: uppercase;
 }
-
+.left-box {
+    display: flex;
+}
 .icon-left {
     display: flex;
 }
-
+.icon-left > li {
+    margin-right: 15px;
+}
 #gnbLeft {
     display: flex;
     color: beige;
 }
 #gnbLeft > li {
-    width: 150px;
     text-align: center;
+    padding:0 40px;
+}
+
+.member {
+    display: flex;
+}
+.right-box {
+    display: flex;
+}
+.icon-right {
+    display: flex;
 }
