--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,60 @@ ul {
 }
 
 /* ------------ 1일차 : ad ------------------------ */
+#modal {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: 9999;
+    background: rgba(0,0,0,.3);
+}
+.message {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 250px;
+    height: 200px;
+    background: ivory;
+}
+.message h2 {
+    background: #502989;
+    color: white;
+    font-weight: 100;
+    padding: 10px 20px;    
+}
+.message p {
+    text-align: center;
+    line-height: 100px;
+    font-size: .875rem;
+}
+#close_x {
+    position: absolute;
+    right: 10px;
+    font-weight: 100;
+    top: 5px;
+    color: white;
+    background: none;
+    border: 0;
+    font-size: 2rem;
+}
+#close_ok {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform:translateX(-50%);
+    border: 0;
+    background: #502989;
+    color: white;
+    padding:10px 20px;
+    border-radius: 5px;        
+}
+#close_ok:hover {
+    background: #7d43d4;
+}
 .ad {
     background: cornflowerblue;
     position: relative;
@@ -95,4 +149,115 @@ ul {
 #gnbRight > li {
     text-align: center;
     padding: 0 40px;
+}
+
+/* section 영역 - 박스오피스 */
+.best4-wrap {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+#best4 {
+    display: flex;
+    margin: 0 -10px;
+}
+#best4 > li {
+    width:calc(25% - 20px);   
+    margin:0 10px;
+}
+#best4 > li:hover .info-overlay {
+    opacity: 1;
+}
+#best4 .movie-poster {
+    border-radius: 5px;
+    font-size: 0;
+    position: relative;
+    overflow: hidden;
+}
+#best4 .movie-poster > img {
+    max-width: 100%;
+}
+.rank {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    font-size: 2rem;
+    color: white;
+    font-style: italic;
+}
+.rank p {
+    text-shadow: 2px 2px 3px black;
+}
+.screen {
+    position: absolute;
+    top:15px;
+    right:0;
+    display: flex;
+}
+.screen > div {
+    padding: 10px 15px;
+    border-radius: 5px;
+    margin: 0 5px;
+    background:rgba(0,0,0,.4);
+}
+.info-overlay {
+    opacity: 0;
+    transition: all .3s;
+    position: absolute;
+    font-size: .875rem;
+    color: white;    
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 20px;
+    background: rgba(0,0,0,.5);
+}
+.info-overlay p {
+    margin: 20px 0;
+}
+
+.reviews {
+    position: absolute;
+    width: calc(100% - 20px);
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 15%;
+    text-align: center;
+}
+.score {
+    color: aqua;
+    font-size: 1.250rem;
+    font-weight: bolder;
+    margin-left: 10px;
+    letter-spacing: 1px;
+}
+
+.box-btns {
+    margin: 10px 0 0 0;
+    display: flex;
+    justify-content: space-between;
+}
+.favorite {
+    border: 1px solid white;
+    border-radius: 5px;
+    padding:5px 20px;
+    color: white !important;
+    font-size: 1rem;
+}
+#heart {
+    display: inline-block;
+    position: relative;
+    top: 2px;
+    width: 17px;
+    height: 15px;
+    margin-right: 5px;
+    background:url("../images/ico-heart-toggle-main.png");
+}
+.booking {
+    border: 1px solid transparent;
+    border-radius: 5px;
+    background: rgb(94, 167, 195);
+    color: white;
+    text-align: center;
+    padding: 5px 65px;
+    font-size: 1rem;
 }
